--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Todoist clone made with React JS and Firebase by Sahil Verma"
     />
     <link
       rel="apple-touch-icon"
